# paaws

./: .gitignore  LICENSE  Makefile  NOTES.md  README.md  pyproject.toml
.github/workflows/: build.yml  cleanup.yml
apppack/: __main__.py  app.py  utils.py
apppack/cli/: auth.py  builds.py  create.py  db.py  deployments.py  destroy.py  shell.py  upgrade.py
paaws/: __init__.py  __main__.py  app.py  docs.py  formatting.py  utils.py
paaws/cli/: __init__.py  auth.py  builds.py  config.py  create.py  db.py  deployments.py  destroy.py  logs.py  pipelines.py  ps.py  shell.py  upgrade.py
paaws/lib/: pipelines.py
