[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "paaws"
author = "Peter Baumgartner"
author-email = "pete@lincolnloop.com"
home-page = "https://github.com/lincolnloop/paaws"
license = "License :: OSI Approved :: MIT License"
requires-python=">=3.6"
requires = [
  "awscli",
  "awslogs",
  "blessed",
  "boto3",
  "click",
  "halo",
  "timeago"
]
description-file = "README.md"

[tool.flit.scripts]
paaws = "paaws.__main__:main"

[tool.flit.metadata.requires-extra]
dev = ["shiv"]
